k8s/payment-ms-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-ms-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-ms
  template:
    metadata:
      labels:
        app: payment-ms
    spec:
      containers:
      - name: payment-ms
        image: intrieri/payment-ms:1.0.0
        ports:
        - containerPort: 8092
