k8s/zipkin-ms-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin-ms-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
      - name: zipkin
        image: openzipkin/zipkin
        ports:
        - containerPort: 9411
