k8s/payment-ms-services.yml
apiVersion: v1
kind: Service
metadata:
  name: payment-ms-ervice
spec:
  type: ClusterIP
  selector:
    app: payment-ms
  ports:
  - port: 8092
    targetPort: 8092
