k8s/zipkin-ms-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zipkin-ms-service
spec:
  type: NodePort
  selector:
    app: zipkin
  ports:
  - port: 9411
    targetPort: 9411
    nodePort: 32766
